--- a/package.json
+++ b/package.json
@@ -42,6 +42,11 @@
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
-    "make-error-cause": "^2.2.0"
+    "make-error-cause": "^2.2.0",
+    "cryptiles": ">=4.1.2",
+    "lodash": ">=4.17.5",
+    "hoek": ">=4.2.1",
+    "uglify-js": ">=2.6.0",
+    "handlebars": ">=4.0.0"
   }
 }
